--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts --exec ts-node"
+    "dev": "nodemon src/index.ts --exec ts-node",
+    "build": "tsc",
+    "deploy": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
