--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts --exec ts-node",
-    "build": "tsc",
-    "deploy": "node ./dist/index.js"
+    "deploy": "tsc && git add . && git commit -m",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
