--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
+    "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
     "socket.io": "^3.0.3",
@@ -18,8 +20,10 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express-fileupload": "^1.1.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
+    "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "@types/socket.io": "^2.1.11",
     "nodemon": "^2.0.6",
